src/test/resources/syntax_errors/reserved_word_as_var1.notc
void main() {
    int void = 1;
}
